dodanie cooldownu na zbite kamienie